<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PlayFull_Project" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="http://jsonplaceholder.typicode.com" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="9kN-xE-zBN" userLabel="URL">
                                <rect key="frame" x="0.0" y="20" width="600" height="87"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="70q-Dp-P17">
                                <rect key="frame" x="92" y="285" width="30" height="30"/>
                                <state key="normal" title="GET"/>
                                <connections>
                                    <action selector="getButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qEc-7C-Wtc"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3aW-Yi-iTR">
                                <rect key="frame" x="188" y="285" width="40" height="30"/>
                                <state key="normal" title="POST"/>
                                <connections>
                                    <action selector="postButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XLq-M7-4VV"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cgS-qC-xyb">
                                <rect key="frame" x="285" y="285" width="30" height="30"/>
                                <state key="normal" title="PUT"/>
                                <connections>
                                    <action selector="putButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JO7-im-8du"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTV-Lh-sgJ">
                                <rect key="frame" x="350" y="285" width="48" height="30"/>
                                <state key="normal" title="PATCH"/>
                                <connections>
                                    <action selector="patchButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mRN-hJ-Msv"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z3Z-ZF-B5y">
                                <rect key="frame" x="419" y="285" width="55" height="30"/>
                                <state key="normal" title="DELETE"/>
                                <connections>
                                    <action selector="deleteButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x5H-xi-5DG"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Resources + Item" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xLd-mh-OIj">
                                <rect key="frame" x="150" y="107" width="300" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Parameter" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UmM-23-dfo">
                                <rect key="frame" x="150" y="161" width="300" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Parameter Value" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xQQ-FN-JGC">
                                <rect key="frame" x="150" y="212" width="300" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="3aW-Yi-iTR" firstAttribute="top" secondItem="xQQ-FN-JGC" secondAttribute="bottom" multiplier="10:8.5" id="0g0-Yo-Evy"/>
                            <constraint firstItem="Z3Z-ZF-B5y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="11K-yl-ixs"/>
                            <constraint firstItem="xLd-mh-OIj" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="5:10" id="67F-zK-Xqs"/>
                            <constraint firstItem="xQQ-FN-JGC" firstAttribute="width" secondItem="UmM-23-dfo" secondAttribute="width" id="7i6-kG-cWg"/>
                            <constraint firstItem="9kN-xE-zBN" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="903-MD-v5A"/>
                            <constraint firstItem="xLd-mh-OIj" firstAttribute="top" secondItem="9kN-xE-zBN" secondAttribute="bottom" id="BUF-m7-POF"/>
                            <constraint firstItem="3aW-Yi-iTR" firstAttribute="leading" secondItem="70q-Dp-P17" secondAttribute="trailing" id="Cs9-F6-XhS"/>
                            <constraint firstItem="xQQ-FN-JGC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DjR-y2-aEk"/>
                            <constraint firstItem="Z3Z-ZF-B5y" firstAttribute="leading" secondItem="3aW-Yi-iTR" secondAttribute="trailing" constant="121" id="E89-Aw-kqv"/>
                            <constraint firstItem="Z3Z-ZF-B5y" firstAttribute="leading" secondItem="3aW-Yi-iTR" secondAttribute="trailing" multiplier="10:7.5" id="F6J-dz-Yte"/>
                            <constraint firstItem="cgS-qC-xyb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Fdb-ZJ-j1h"/>
                            <constraint firstItem="UTV-Lh-sgJ" firstAttribute="leading" secondItem="cgS-qC-xyb" secondAttribute="trailing" multiplier="10:9" id="LH1-8d-POu"/>
                            <constraint firstItem="xQQ-FN-JGC" firstAttribute="top" secondItem="UmM-23-dfo" secondAttribute="bottom" multiplier="10:9" id="P4o-bS-vY8"/>
                            <constraint firstItem="Z3Z-ZF-B5y" firstAttribute="leading" secondItem="UTV-Lh-sgJ" secondAttribute="trailing" multiplier="10:9.5" id="Pj8-cs-jPJ"/>
                            <constraint firstItem="3aW-Yi-iTR" firstAttribute="leading" secondItem="70q-Dp-P17" secondAttribute="trailing" multiplier="10:6.5" id="SEg-tN-d9K"/>
                            <constraint firstAttribute="trailingMargin" secondItem="9kN-xE-zBN" secondAttribute="trailing" id="UgA-JE-hLF"/>
                            <constraint firstItem="9kN-xE-zBN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="152" id="V1N-6e-vrj"/>
                            <constraint firstItem="3aW-Yi-iTR" firstAttribute="top" secondItem="xLd-mh-OIj" secondAttribute="bottom" multiplier="10:9" id="YPb-Bb-gDa"/>
                            <constraint firstItem="70q-Dp-P17" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="agv-fp-TMP"/>
                            <constraint firstItem="UTV-Lh-sgJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ddx-gm-GHc"/>
                            <constraint firstItem="UmM-23-dfo" firstAttribute="top" secondItem="xLd-mh-OIj" secondAttribute="bottom" multiplier="10:8.5" id="dt8-qe-zkI"/>
                            <constraint firstItem="3aW-Yi-iTR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fyq-um-hop"/>
                            <constraint firstItem="9kN-xE-zBN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="hCb-2w-M3r"/>
                            <constraint firstItem="9kN-xE-zBN" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="iIe-Yl-KRE"/>
                            <constraint firstItem="cgS-qC-xyb" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="jU1-w7-Zan"/>
                            <constraint firstItem="UmM-23-dfo" firstAttribute="width" secondItem="xLd-mh-OIj" secondAttribute="width" id="kqC-MP-6mY"/>
                            <constraint firstItem="3aW-Yi-iTR" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="mQK-gn-vZn"/>
                            <constraint firstItem="70q-Dp-P17" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="onr-gh-ZHY"/>
                            <constraint firstItem="Z3Z-ZF-B5y" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="q7u-Ur-Gpo"/>
                            <constraint firstItem="cgS-qC-xyb" firstAttribute="leading" secondItem="3aW-Yi-iTR" secondAttribute="trailing" multiplier="10:8" id="rpB-re-Nfd"/>
                            <constraint firstItem="UmM-23-dfo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uj7-Im-apr"/>
                            <constraint firstItem="xLd-mh-OIj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wto-kW-fck"/>
                            <constraint firstItem="70q-Dp-P17" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="xLN-Vv-kAR"/>
                            <constraint firstItem="9kN-xE-zBN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yIh-49-O7H"/>
                        </constraints>
                        <variation key="default">
                            <mask key="constraints">
                                <exclude reference="903-MD-v5A"/>
                                <exclude reference="UgA-JE-hLF"/>
                                <exclude reference="V1N-6e-vrj"/>
                                <exclude reference="agv-fp-TMP"/>
                                <exclude reference="xLN-Vv-kAR"/>
                                <exclude reference="Cs9-F6-XhS"/>
                                <exclude reference="YPb-Bb-gDa"/>
                                <exclude reference="fyq-um-hop"/>
                                <exclude reference="11K-yl-ixs"/>
                                <exclude reference="E89-Aw-kqv"/>
                                <exclude reference="F6J-dz-Yte"/>
                            </mask>
                        </variation>
                    </view>
                    <connections>
                        <outlet property="parameter" destination="UmM-23-dfo" id="20K-ty-rcd"/>
                        <outlet property="parameterValue" destination="xQQ-FN-JGC" id="0R3-aA-Kz3"/>
                        <outlet property="resourcesPlusItem" destination="xLd-mh-OIj" id="k4U-lU-Dcy"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
</document>
